--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -29,7 +29,7 @@
 \rowcolor{lightgray}
 \textbf{Class} & \textbf{Mechanism} & \textbf{Resembles} & Rank \\  \hline
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-\multirow{18}{*}{Backed}		
+\multirow{17}{*}{Backed}		
 						& \multirow{8}{*}{Directly-Backed \& Redeemable$^{\dagger}$}	& USDC 			& 20 \\ \cline{3-4}
 						&													& TrueUSD 		& 26 \\ \cline{3-4}	
 						&													& Paxos 			& 38 \\ \cline{3-4}		
@@ -48,16 +48,17 @@
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 						& \multirow{3}{*}{Indirectly-Backed}							& Dai 			& 57 \\ \cline{3-4}
                                                 &													& BitUSD 			& 398 \\  \cline{3-4}
-                                                & 													& Nomin			& $\perp$ \\ \cline{2-4}
+                                                & 													& Nomin			& $\perp$ \\ \cline{1-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{1}{*}{Market Manipulation} 						& NuBits			& 892 \\ \cline{1-4}
-\multirow{4}{*}{Intervention}                                                           
+%						& \multirow{1}{*}{Market Manipulation} 						& NuBits			& 892 \\ \cline{1-4}
+\multirow{5}{*}{Intervention}                                                           
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 						& \multirow{2}{*}{Money Supply Adjustments}  				& Ampleforth		& $\perp$  \\ \cline{3-4}
 						&   													& RSCoin 			& $\perp$  \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
-						& \multirow{2}{*}{Asset Transfer}  							& CarbonUSD		& 1262 \\ \cline{3-4}
+						& \multirow{2}{*}{Asset Transfer}  							& NuBits			& 892 \\ \cline{3-4}
+						&													& CarbonUSD		& 1262 \\ \cline{3-4}
 						&													& Basecoin 		& $\perp$ \\ \cline{1-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 %						& \multirow{2}{*}{TBD: Internal }  								& Nautiluscoin 		& $\perp$ \\ \cline{3-4}
