--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -254,3 +254,11 @@ month = {},
 year = {},
 note = {(Accessed on 02/23/2019)}
 }
+
+
+@article{wood2014ethereum,
+  title={Ethereum yellow paper},
+  author={Wood, Gavin},
+  journal={Internet: https://github. com/ethereum/yellowpaper,[Oct. 30, 2018]},
+  year={2014}
+}
